[package]
name = "streamz-rs"
version = "0.1.0"
edition = "2021"
# build.rs no longer needed

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
# Audio crates removed for Canvas compatibility
# rodio = "0.17"
# cpal = "0.15"
crossterm = "0.27"
ndarray-npy = "0.8"
hound = "3"
minimp3 = "0.5"
indicatif = "0.17"
rustfft = "6"
rustdct = "0.7"
mel_filter = "0.1"
rubato = "0.13"
realfft = "0.3"
rayon = "1.7"
once_cell = "1"

[[bin]]
name = "StreamZ"
path = "src/main.rs"
