[package]
name = "streamz-rs"
version = "0.1.0"
edition = "2021"
# build.rs no longer needed

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
rand = "0.8.5"
tokio = { version = "1.45.1", features = ["full"] }
# Audio crates removed for Canvas compatibility
# rodio = "0.17"
# cpal = "0.15"
crossterm = "0.27.0"
ndarray-npy = "0.8.1"
hound = "3.5.1"
minimp3 = "0.5.1"
indicatif = "0.17.11"
rustfft = "6.4.0"
rustdct = "0.7.1"
mel_filter = "0.1.1"
rubato = "0.13.0"
realfft = "0.3.0"
rayon = "1.10.0"
once_cell = "1.21.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
sha2 = "0.10"

[[bin]]
name = "StreamZ"
path = "src/main.rs"
